Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27239

WebAssembly: emrun with --browser parameter cannot be launced (latest emsdk)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 7.0.1
    • Qt Creator 7.0.0
    • All Other Issues
    • None
    • 7c4df8d23e (qt-creator/qt-creator/7.0) 7c4df8d23e (qt-creator/qt-creator/master) 7c4df8d23e (qt-creator/qt-creator/qds-3.3) 7c4df8d23e (qt-creator/tqtc-qt-creator/7.0)

    Description

      With the latest emsdk version, Qt Creator fails to launch emrun with the --browser parameter:

      emrun emits:

      Unable to find browser "firefox"! Check the correctness of the passed --browser=xxx parameter!

      Qt Creator warns:

      QtcProcess::start: Empty environment set when running 'C:/Users/aportale/emsdk-3.1.6/python/3.9.2-nuget_64bit/python.exe'.

      Launching the same emrun command in a terminal does work.

      Qt Creator runs emrun in a rather clean environment. I assume that emsdk's emrun command now expets more entries in PATH to perform browser detection. I'll try to use the system environment as the basis for the emsdk call.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-27239
        # Subject Branch Project Status CR V

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes