WebAssembly: Fix "emrun --browser" call with latest emsdk

emsdk's emrun now requires additional PATH entries in order to detect a
web browser location. At least on Windows.

Therefore, as a fix, use the build configuration environment instead of
an empty one for the emsdk call.

Fixes: QTCREATORBUG-27239
Change-Id: Ibe256265bd70f39693594f739403c415108fd981
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>